# fastapi-shopping

./: .gitignore  README.md  auth.py  main.py  models.py  pydantic_models.py  pyproject.toml
app/: config.py
routes/: cart.py  catalog.py  order.py  payments.py  user.py
src/fastapi_shopping/: auth.py  conftest.py  db.py  main.py  models.py
src/fastapi_shopping/routes/: cart.py  catalog.py  order.py  payments.py  user.py
test/: integration_test.py
