[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fastapi-shopping"
version = "0.1.0"
description = "A FastAPI shopping application"

[tool.poetry.dependencies]
python = "^3.9"
anyio = "4.8.0"
asgiref = "3.8.1"
click = "8.1.8"
fastapi = "0.85.2"
fquery = "^0.3"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
sniffio = "1.3.1"
starlette = "0.20.4"
typing-extensions = "4.12.2"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
black = "^22.3.0"
isort = "^5.11.4"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"
